crates/ruff_python_parser/tests/snapshots/valid_syntax@class_type_params_py312.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/ok/class_type_params_py312.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..96,
        body: [
            ClassDef(
                StmtClassDef {
                    node_index: NodeIndex(None),
                    range: 44..95,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("Foo"),
                        range: 50..53,
                        node_index: NodeIndex(None),
                    },
                    type_params: Some(
                        TypeParams {
                            range: 53..90,
                            node_index: NodeIndex(None),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 54..69,
                                        name: Identifier {
                                            id: Name("S"),
                                            range: 54..55,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: Some(
                                            Tuple(
                                                ExprTuple {
                                                    node_index: NodeIndex(None),
                                                    range: 57..69,
                                                    elts: [
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 58..61,
                                                                id: Name("str"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(None),
                                                                range: 63..68,
                                                                id: Name("bytes"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ],
                                                    ctx: Load,
                                                    parenthesized: true,
                                                    is_anon_named_tuple: false,
                                                    is_anon_named_tuple_value: false,
                                                    parameter_slash: None,
                                                    parameter_star: None,
                                                    is_parameter_shape: false,
                                                },
                                            ),
                                        ),
                                        default: None,
                                        variance: None,
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        node_index: NodeIndex(None),
                                        range: 71..79,
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 71..72,
                                            node_index: NodeIndex(None),
                                        },
                                        lower_bound: None,
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 74..79,
                                                    id: Name("float"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: None,
                                        variance: None,
                                    },
                                ),
                                TypeVarTuple(
                                    TypeParamTypeVarTuple {
                                        node_index: NodeIndex(None),
                                        range: 81..84,
                                        name: Identifier {
                                            id: Name("Ts"),
                                            range: 82..84,
                                            node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                                ParamSpec(
                                    TypeParamParamSpec {
                                        node_index: NodeIndex(None),
                                        range: 86..89,
                                        name: Identifier {
                                            id: Name("P"),
                                            range: 88..89,
                                            node_index: NodeIndex(None),
                                        },
                                        default: None,
                                    },
                                ),
                            ],
                            separators: TypeParamSeparators {
                                positional_only_count: None,
                                keyword_only_start: None,
                                slash_range: None,
                                star_range: None,
                            },
                        },
                    ),
                    arguments: None,
                    body: [
                        Expr(
                            StmtExpr {
                                node_index: NodeIndex(None),
                                range: 92..95,
                                value: EllipsisLiteral(
                                    ExprEllipsisLiteral {
                                        node_index: NodeIndex(None),
                                        range: 92..95,
                                    },
                                ),
                            },
                        ),
                    ],
                    implementation: None,
                },
            ),
        ],
    },
)
```
